test/corpus/filters.txt
==================
FILTERS
==================

:ruby
  test = Test.first.to_label

---

(document
  (filter
    (filter_name)
    (filter_content)))

==================
FILTERS Empty
==================

:ruby

---

(document
  (filter
    (filter_name)))

==================
FILTERS Nested within elements
==================

%p
  :markdown
    # Greetings

    Hello, *World*

---

(document
  (block
    (tag
      (tag_name))
    (filter
      (filter_name)
      (filter_content))))

==================
FILTERS With Ruby interpolation
==================

:textile
  I *really* prefer _#{flavor}_ jam.

---

(document
  (filter
    (filter_name)
    (filter_content)))

==================
FILTERS Custom filter names
==================

:22textile1
:22_textile1
:textile1
  I *really* prefer _#{flavor}_ jam.

---

(document
  (filter
    (filter_name))
  (filter
    (filter_name))
  (filter
    (filter_name)
    (filter_content)))

==================
FILTERS Invalid filter names
:error
==================

:22tex%tile1
:22_te:xtile1

---

(document
  (filter
    (filter_name))
  (filter
    (filter_name))
  (filter
    (filter_name)
    (filter_content)))
